fix external link icons bleeding through nav
closes #416

--- a/views/layouts/main/less/nav.less
+++ b/views/layouts/main/less/nav.less
@@ -8,7 +8,9 @@
   background-color: black;
   color:            white;
   font-size:        var(--font-size-large);
-  top:              0;
+  // stylelint-disable-next-line unit-blacklist
+  top:              -1px; // fixes black space above nav on scroll
+  z-index:          1;
 
   ul {
     flex-flow:       row wrap;
